# fcitx5-lotus

./: .all-contributorsrc  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.en.md  CONTRIBUTING.md  INSTALL.en.md  README.en.md  README.md  lotus-version.h  org.fcitx.Fcitx5.Addon.Lotus.metainfo.xml.in  update_translate.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  packaging-dev.yml  packaging-release.yml
bamboo/: bamboo-c.go  fcitxbambooengine.go
data/dictionaries/: vietnamese.cm.dict
data/emoji/: emoji_data.cpp  emoji_data.h  generate_emoji_header.py
keymap-editor/: editor.cpp  editor.h  main.cpp
macro-editor/: editor.cpp
misc/: user-lotus.conf
nix/modules/nixos/fcitx5-lotus/: default.nix
packaging/debian/: changelog  control  postinst
packaging/rpm/fedora/: fcitx5-lotus.spec
packaging/rpm/opensuse/: fcitx5-lotus.spec
po/: fcitx5-lotus.pot  vi.po
scripts/test/: auto_restore_test.py
server/: CMakeLists.txt  lotus-logger.cpp  lotus-logger.h  lotus-server.cpp  lotus-server.h
settings-gui/: CMakeLists.txt
settings-gui/core/: dbus_handler.py
settings-gui/ui/: main_window.py
settings-gui/ui/pages/: about.py  backup.py  dict_editor.py  dynamic_settings.py  keymap_editor.py  macro_editor.py  mode_manager.py
src/: CMakeLists.txt  emoji-entry.h  emoji.cpp  emoji.h  lotus-candidates.cpp  lotus-candidates.h  lotus-config.h  lotus-engine.cpp  lotus-engine.h  lotus-monitor.cpp  lotus-monitor.h  lotus-state.cpp  lotus-state.h  lotus-utils.cpp  lotus-utils.h  lotus.cpp  lotus.h
